--- a/src/veaws/Footer/Footer.module.scss
+++ b/src/veaws/Footer/Footer.module.scss
@@ -1,6 +1,4 @@
 .footer {
-  background-color: #1C1C1C;
-  color: #ffffff;
   padding: 32px 0 40px 0;
 
   @media (min-width: 820px) {
@@ -11,7 +9,7 @@
   }
 }
 
-.container {
+.publication {
   display: flex;
   flex-direction: column;
   gap: 24px;
