--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: start;
   flex-direction: column;
+  justify-items: center;
 
   @media (min-width: 580px) {
 
@@ -17,21 +18,21 @@
 .phone {
   display: flex;
   gap: 4px;
-  margin-bottom: 20px;
 }
 
 .list {
   display: flex;
   gap: 8px;
   list-style-type: none;
-  margin: 0;
+  margin: 0;padding: 0;
 
 }
 
 .link {
   border-radius: 4px;
   outline: 1px solid transparent;
-
+  display: flex;
+  align-items: center;
   &:hover,
   &:active {
     color: #780096;
@@ -42,4 +43,9 @@
     color: #780096;
     outline-color: #780096;
   }
+}
+
+.link2 {
+  width: 50px;
+  height: 50px;
 }
