--- a/src/components/Page/Page.module.scss
+++ b/src/components/Page/Page.module.scss
@@ -2,4 +2,12 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+
+  @media (min-width: 768px) {
+    display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-auto-rows: 1fr;
+      gap: 20px 16px;
+      grid-auto-flow: row;
+  }
 }
