--- a/src/veaws/Footer/Footer.module.scss
+++ b/src/veaws/Footer/Footer.module.scss
@@ -1,12 +1,11 @@
 .footer {
   padding: 32px 0 40px 0;
 
+
   @media (min-width: 820px) {
     padding: 40px 0;
   }
-  @media (min-width: 1120px) {
 
-  }
 }
 
 .publication {
@@ -45,10 +44,20 @@
   @media (min-width: 580px) {
     grid-column: 2/3;
   }
+
 }
 
 .copyright {
   @media (min-width: 580px) {
     grid-column: 1/2;
   }
+}
+
+.container {
+  @media (min-width: 768px) {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+
 }
