--- a/src/components/Page/Page.module.scss
+++ b/src/components/Page/Page.module.scss
@@ -2,12 +2,31 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-
+  @media (min-width: 820px) {
+    flex-direction: row;
+  }
+}
+.publications {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   @media (min-width: 768px) {
     display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-auto-rows: 1fr;
-      gap: 20px 16px;
-      grid-auto-flow: row;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 1fr;
+    gap: 20px 16px;
+    grid-auto-flow: row;
   }
+}
+
+.page {
+  display: flex;
+}
+
+.subsection {
+
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
 }
