--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -17,7 +17,7 @@
   padding-bottom: 13px;
   background:linear-gradient(0.00deg, rgba(8, 4, 53, 0.81) 14.848%,rgba(8, 4, 53, 0) 61.02%), url("./src/images/test.png");
   width: 100%;
-  height: 194px;
+  min-height: 194px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -31,3 +31,38 @@
   text-align: left;
   padding-left: 15px;
 }
+
+.container {
+
+  @media (min-width: 820px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px 16px;
+    grid-template-areas:
+    "lead lead second"
+    "lead lead third";
+  }
+
+}
+.lead {
+
+  @media (min-width: 820px) {
+
+    grid-area: lead;
+  }
+   }
+.second {
+  display: none;
+  @media (min-width: 820px) {
+    display: flex;
+    grid-area: second;
+  }
+  }
+.third {
+  display: none;
+  @media (min-width: 820px) {
+    display: flex;
+    grid-area: third;
+  }
+   }
