--- a/src/components/News/News.module.scss
+++ b/src/components/News/News.module.scss
@@ -10,20 +10,25 @@
 .paragraph {
   grid-area: paragraph;
   font-size: 12px;
+  line-height: 1.1;
   align-self: center;
+  margin: 0;
 }
 
 .image {
   grid-area: image;
   width: 100%;
-  object-position: center;
+  height: 100%;
 }
 
 .title {
+  box-sizing: border-box;
   justify-self: center;
   grid-area: title;
   align-self: center;
-  font-size: 16px;
+  font-size: 14px;
+  line-height: 1.2;
   margin: 0;
+  padding: 4px;
   width: 100%;
 }
