--- a/src/components/News/News.module.scss
+++ b/src/components/News/News.module.scss
@@ -1,4 +1,5 @@
-.news {  display: grid;
+.news {
+  display: grid;
   grid-template-columns: 40% 60%;
   grid-auto-flow: row;
   grid-template-areas:
