--- a/src/Articles/Vostok/Vostok.module.scss
+++ b/src/Articles/Vostok/Vostok.module.scss
@@ -44,3 +44,11 @@
   gap: 15px;
   align-items: center;
 }
+
+.list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  text-align: left;
+}
