--- a/src/components/Promo/Promo.module.scss
+++ b/src/components/Promo/Promo.module.scss
@@ -1,16 +1,43 @@
+@font-face {
+  font-family: 'Inter';
+  font-display: swap;
+  src: url(./fonts/Inter-Regular.woff2) format('woff2'),
+  url(./fonts/Inter-Regular.woff) format('woff');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-display: swap;
+  src: url(./fonts/Inter-Medium.woff2) format('woff2'),
+  url(./fonts/Inter-Medium.woff) format('woff');
+  font-weight: 500;
+}
 
 .promo {
   background: url("../src/components/Promo/images/Promo-small.jpg") no-repeat center right;
   background-size: 100% auto;
+  box-sizing: border-box;
+  padding: 30px 15px;
   width: 100%;
   height: 294px;
   border-radius: 7px;
+  font-family: 'Inter', ‘Arial’, sans-serif;
 }
 
 .title {
   color: #000;
-  padding-top: 23px;
+
   text-align: left;
-  padding-left: 15px;
+
   margin: 0;
+  font-weight: 500;
+}
+
+.text {
+  font-size: 30px;
+  font-weight: 400;
+  text-align: left;
+  margin: 0;
+  padding-top: 10px;
 }
