--- a/src/Articles/Nalog/Nalog.module.scss
+++ b/src/Articles/Nalog/Nalog.module.scss
@@ -1,5 +1,6 @@
 .paper {
-
+  box-sizing: border-box;
+ display: block;
 }
 
 .title {
@@ -44,4 +45,14 @@
   padding: 0;
   font-size: 16px;
   text-align: left;
+}
+
+.image {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 800px;
+}
+
+.item {
+  text-align: center;
 }
