--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -13,9 +13,10 @@
 
 .publications {
   @include flex-item;
+
   @media (min-width: 768px) {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-rows: 1fr;
     gap: 20px 16px;
     grid-auto-flow: row;
@@ -28,4 +29,5 @@
 
 .subsection {
   @include flex-item;
+  display: none;
 }
