--- a/src/components/Publication/Publication.module.scss
+++ b/src/components/Publication/Publication.module.scss
@@ -5,6 +5,8 @@
 
 .publication {
   box-sizing: border-box;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
   background-color: #eae9e9;
   border-radius: 10px;
   overflow: hidden;
@@ -33,7 +35,7 @@
 
 .image {
   width: 100%;
-
+  height: 100%;
   max-height: 303px;
 }
 
